# dns_resolver

./: CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt  Examples.cpp  Examples2.cpp
include/: BasicMetrics.h  CaresQueryStrategy.h  ConfigManager.h  DNSResolver.h  EventPublisher.h  LRUCache.h  PluginManager.h
include/interface/: Common.h  ICache.h  IConfigManager.h  IDNSQueryStrategy.h  IEventPublisher.h  ILogger.h  IMetrics.h
src/: BasicMetrics.cpp  CaresQueryStrategy.cpp  ConfigManager.cpp  DNSResolver.cpp  EventPublisher.cpp  LRUCache.cpp  PluginManager.cpp
